added on load animations

--- a/newtab-app/public/manifest.json
+++ b/newtab-app/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "version": "1.0",
   "manifest_version": 3,
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "air tab",
+  "name": "new air tab",
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
